# idl_parser_rs

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: api-reference.md  phase1-parser.md  phase2-decoder.md
src/: lib.rs
src/ast/: types.rs
src/decoder/: codec.rs  mod.rs  string.rs
src/parser/: annotation.rs  base_type.rs  bitset.rs  comment.rs  field.rs  mod.rs  module.rs  sequence.rs  string_type.rs  struct_type.rs  type.rs  util.rs
tests/: decoder_tests.rs  parser_tests.rs
tests/test_data/: README.md  s1_test.idl  test.idl  test_array_padding.idl  test_complex.idl  test_string_padding.idl  test_sts.idl
