[package]
name = "idl_parser_rs"
version = "0.1.0"
edition = "2021"
description = "OMG IDL Parser written in Rust, inspired by gomme/idlparser"

[dependencies]
nom = "8"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
json = ["serde", "serde_json"]
